--- a/11-worldwise/starter/index.html
+++ b/11-worldwise/starter/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/public/icon.png" />
+  <link rel="icon" type="image/png" href="/public/icon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>WorldWise</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
